links to slides

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ server {
     rewrite /blog/2007/12/01/django-performance-apache-vs-nginx-en.* /en/2007/12/01/django-performance-apache-vs-nginx/ permanent;
     rewrite /blog/2007/11/24/nginx-mod-wsgi-vs-fastcgi-en.* /en/2007/11/24/nginx-mod-wsgi-vs-fastcgi/ permanent;
 
-    # dropped dates
+    # drop date
     rewrite /(blog|en)/(\d{4})/\d\d/\d\d/(.*) /$1/$2/$3;
     
 }
