--- a/nginx.conf
+++ b/nginx.conf
@@ -44,8 +44,7 @@ server {
     rewrite /blog/2007/11/24/nginx-mod-wsgi-vs-fastcgi-en.* /en/2007/11/24/nginx-mod-wsgi-vs-fastcgi/ permanent;
 
     # drop date
-    rewrite /(blog|en)/(\d{4})/\d\d/\d\d/(.*) /$1/$2/$3;
-    
+    rewrite "^/(blog|en)/(\d{4})/\d\d/\d\d/(.*)" /$1/$2/$3 permanent;
 }
 
 server {
