proxy pass to webhooker

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,11 +6,18 @@ server {
     rewrite /feeds/.* /blog.atom permanent;
     rewrite ^/(opster|cyrax).* http://github.com/piranha/$1 permanent;
 
+    location /webhook {
+        proxy_pass http://localhost:5010;
+        allow 204.232.175.64/27;
+        allow 192.30.252.0/22;
+        deny all;
+    }
+
     location /files {
         expires 10d;
         alias /home/piranha/web/files;
     }
-    
+
     location /blog.atom {
         if ($http_user_agent !~ FeedBurner) {
             rewrite .* http://feeds.feedburner.com/AmazonByteflow;
