--- a/config
+++ b/config
@@ -41,12 +41,25 @@ en/*/*.md: static/style.less
 	template post
 	template page
 
+linksoup/*/*.md: static/style.less
+	config
+	ext .html
+	directorify
+	markdown
+	template one-link
+	template page
+
 blog/index.html: blog/*/*.md static/style.less
 	config
 	inner-template
 	template page
 
 en/index.html: en/*/*.md static/style.less
+	config
+	inner-template
+	template page
+
+linksoup/index.html: linksoup/*/*.md static/style.less
 	config
 	inner-template
 	template page
