--- a/config
+++ b/config
@@ -41,12 +41,12 @@ en/*/*.md: static/style.less
 	template post
 	template page
 
-linksoup/*/*.md: static/style.less
+links/*/*.md: static/style.less
 	config
 	ext .html
 	directorify
 	markdown
-	template one-link
+	template link-html
 	template page
 
 blog/index.html: blog/*/*.md static/style.less
@@ -59,7 +59,7 @@ en/index.html: en/*/*.md static/style.less
 	inner-template
 	template page
 
-linksoup/index.html: linksoup/*/*.md static/style.less
+links/index.html: links/*/*.md static/style.less
 	config
 	inner-template
 	template page
@@ -97,5 +97,5 @@ blog.atom: blog/*/*.md
 en.atom: en/*/*.md
 	inner-template
 
-linksoup.atom: linksoup/*/*.md
+links.atom: links/*/*.md
 	inner-template
