strange, but this removes extraneous slash

--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ server {
     # drop date
     rewrite "^/(blog|en)/(\d{4})/\d\d/\d\d/(.*)" /$1/$2/$3 permanent;
     # year index
-    rewrite "^/(blog|en)/(\d{4})/$" /$1/\#$2 permanent;
+    rewrite "^/(blog|en)/(\d{4})/$" /$1\#$2 permanent;
 }
 
 server {
