--- a/config
+++ b/config
@@ -64,6 +64,11 @@ links/index.html: links/*/*.md static/style.less
 	inner-template
 	template page
 
+tags/index.html: tags/*.tag
+	config
+	inner-template
+	template page
+
 index.html: blog/index.html en/index.html links/index.html static/style.less
 	config
 	inner-template
