switch to normal docker container

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,9 +13,9 @@ http {
     types_hash_bucket_size 64;
 
 server {
-    listen <%= ENV['PORT'] %>;
+    listen 80;
     server_name solovyov.net;
-    root /app/www;
+    root /data/www;
     port_in_redirect off;
 
     rewrite /blog/feed/ /blog.atom permanent;
@@ -46,7 +46,7 @@ server {
     }
 
     location /static {
-        expires 10d;
+        expires 100d;
     }
 
     location / {
@@ -68,14 +68,14 @@ server {
 }
 
 server {
-    listen <%= ENV['PORT'] %>;
     server_name piranha.org.ua www.piranha.org.ua www.solovyov.net;
+    listen 80;
     return 301 $scheme://solovyov.net$request_uri;
 }
 
 server {
     server_name blog.piranha.org.ua;
-    listen <%= ENV['PORT'] %>;
+    listen 80;
     return 301 $scheme://solovyov.net/blog$request_uri;
 }
 
