--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
 server {
     listen 80;
     server_name solovyov.net;
-    root /data/www;
+    root /app/www;
     port_in_redirect off;
 
     rewrite /blog/feed/ /blog.atom permanent;
