upgrade all the stuff

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ http {
 	include mime.types;
     server_names_hash_bucket_size 64;
     types_hash_bucket_size 64;
+    gzip on;
+    gzip_types text/plain text/css application/javascript;
 
 server {
     listen 80;
