redirect on double slashes

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,9 @@ server {
     root /app/www;
     port_in_redirect off;
 
+    merge_slashes off;
+    rewrite (.*)//+(.*) $1/$2 permanent;
+
     rewrite /blog/feed/ /blog.atom permanent;
     rewrite /feeds/.* /blog.atom permanent;
     rewrite ^/(opster|cyrax).* http://github.com/piranha/$1 permanent;
