--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     server_names_hash_bucket_size 64;
     types_hash_bucket_size 64;
     gzip on;
-    gzip_types text/plain text/css application/javascript;
+    gzip_types text/plain text/css application/javascript image/svg+xml;
 
 server {
     listen 80;
