--- a/nginx.conf
+++ b/nginx.conf
@@ -39,17 +39,6 @@ server {
         alias /files;
     }
 
-    location /blog.atom {
-        if ($http_user_agent !~ FeedBurner) {
-            rewrite .* http://feeds.feedburner.com/AmazonByteflow;
-        }
-    }
-    location /en.atom {
-        if ($http_user_agent !~ FeedBurner) {
-            rewrite .* http://feeds.feedburner.com/BloggingSpree;
-        }
-    }
-
     location /static {
         expires 1y;
     }
@@ -73,15 +62,9 @@ server {
 }
 
 server {
-    server_name piranha.org.ua www.piranha.org.ua www.solovyov.net;
+    server_name www.solovyov.net;
     listen 80;
     return 301 $scheme://solovyov.net$request_uri;
-}
-
-server {
-    server_name blog.piranha.org.ua;
-    listen 80;
-    return 301 $scheme://solovyov.net/blog$request_uri;
 }
 
 }
