cache favicon longer

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,10 @@ server {
         expires 1y;
     }
 
+    location /favicon.ico {
+        expires 1y;
+    }
+
     location / {
         expires 1h;
     }
