--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 # -*- mode: makefile -*-
 
-TEMPLATES = site.tmpl utils.tmpl
+TEMPLATES = site.tmpl utils.tmpl amp.tmpl
 SOURCE = src
 OUTPUT = www
 TITLE = solovyov.net
@@ -23,6 +23,26 @@ AUTHOR = Alexander Solovyov
 	markdown
 	template page
 
+# AMP
+
+blog/*/*.md:
+	config
+	rename */amp.html
+	directorify
+	markdown
+	template amp-post
+	template amp
+
+en/*/*.md: static/style.less
+	config
+	rename */amp.html
+	directorify
+	markdown
+	template amp-post
+	template amp
+
+# Blog
+
 blog/*/*.md: static/style.less
 	config
 	ext .html
@@ -41,6 +61,8 @@ en/*/*.md: static/style.less
 	template post
 	template page
 
+# Links...
+
 links/*/*.md: static/style.less
 	config
 	ext .html
@@ -48,6 +70,8 @@ links/*/*.md: static/style.less
 	markdown
 	template link-html
 	template page
+
+# Indexes
 
 blog/index.html: blog/*/*.md static/style.less
 	config
@@ -74,7 +98,7 @@ index.html: blog/index.html en/index.html links/index.html static/style.less
 	inner-template
 	template page
 
-*.html: static/style.less
+*.html: static/style.scss
 	config
 	directorify
 	inner-template
@@ -84,6 +108,9 @@ static/*.css:
 	ignore
 
 static/style.scss:
+	ignore
+
+static/*.scss: static/mobi.css static/style.scss
 	ext .css
 	:sassc -t compressed -I src/static
 
