--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
-{"name": "solovyov.net",
+{
+ "name": "solovyov.net",
  "version": "1.0.0",
  "description": "my site",
  "author": "Alexander Solovyov",
  "license": "ISC",
  "dependencies": {
-     "less": "~2.5.3",
-     "uglifyjs": "~2.4.10"
+  "less": "~2.5.3",
+  "node-sass": "^4.5.2",
+  "uglifyjs": "~2.4.10"
  }
 }
