--- a/nginx.conf
+++ b/nginx.conf
@@ -63,6 +63,8 @@ server {
     rewrite "^/(blog|en)/(\d{4})/\d\d/\d\d/(.*)" /$1/$2/$3 permanent;
     # year index
     rewrite "^/(blog|en)/(\d{4})/$" "/$1#$2" permanent;
+
+    rewrite /slides/18-09-15-highload /slides/18-09-15-make-it-fast permanent;
 }
 
 server {
