--- a/nginx.conf
+++ b/nginx.conf
@@ -49,6 +49,9 @@ server {
 
     location / {
         expires 1h;
+        location ~* (/|\.html)$ {
+            include /app/www/_nginx_push.conf;
+        }
     }
 
     # invalid urls
