--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,9 @@ http {
     server_names_hash_bucket_size 64;
     types_hash_bucket_size 64;
     gzip on;
+    gzip_vary on;
     gzip_types text/plain text/css application/javascript image/svg+xml;
+    charset utf-8;
 
 server {
     listen 80;
