upd index page to include my name lol

--- a/nginx.conf
+++ b/nginx.conf
@@ -70,6 +70,7 @@ server {
     rewrite "^/(blog|en)/(\d{4})/$" "/$1#$2" permanent;
 
     rewrite /slides/18-09-15-highload /slides/18-09-15-make-it-fast permanent;
+    rewrite /about/ / permanent;
 }
 
 server {
