--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     types_hash_bucket_size 64;
     gzip on;
     gzip_vary on;
-    gzip_types text/html text/plain text/css application/javascript image/svg+xml;
+    gzip_types text/plain text/css application/javascript image/svg+xml;
     charset utf-8;
 
 server {
