--- a/nginx.conf
+++ b/nginx.conf
@@ -1,45 +1,11 @@
-worker_processes 1;
-error_log stderr;
-pid nginx.pid;
-daemon off;
-
-events {
-	worker_connections 768;
-} 
-
-http {
-	include mime.types;
-    server_names_hash_bucket_size 64;
-    types_hash_bucket_size 64;
-    gzip on;
-    gzip_vary on;
-    gzip_types text/plain text/css application/javascript image/svg+xml;
-    charset utf-8;
-
 server {
     listen 80;
     server_name solovyov.net;
-    root /app/www;
+    root /opt/solovyov.net/www;
     port_in_redirect off;
 
     merge_slashes off;
     rewrite (.*)//+(.*) $1/$2 permanent;
-
-    rewrite /blog/feed/ /blog.atom permanent;
-    rewrite /feeds/.* /blog.atom permanent;
-    rewrite ^/(opster|cyrax).* http://github.com/piranha/$1 permanent;
-
-    location /webhook {
-        proxy_pass http://localhost:5010;
-        allow 204.232.175.64/27;
-        allow 192.30.252.0/22;
-        deny all;
-    }
-
-    location /files {
-        expires 10d;
-        alias /files;
-    }
 
     location /static {
         expires 1y;
@@ -52,11 +18,14 @@ server {
     location / {
         expires 1h;
         location ~* (/|\.html)$ {
-            include /app/www/_nginx_push.conf;
+            include /opt/solovyov.net/www/_nginx_push.conf;
         }
     }
 
     # invalid urls
+    rewrite /blog/feed/ /blog.atom permanent;
+    rewrite /feeds/.* /blog.atom permanent;
+    rewrite ^/(opster|cyrax).* http://github.com/piranha/$1 permanent;
     rewrite /blog/feed.atom /blog.atom permanent;
     rewrite /en/feed.atom /en.atom permanent;
     rewrite /blog/sz.* /sz/ permanent;
@@ -77,6 +46,4 @@ server {
     server_name www.solovyov.net;
     listen 80;
     return 301 $scheme://solovyov.net$request_uri;
-}
-
 }
