--- a/Caddyfile
+++ b/Caddyfile
@@ -4,9 +4,7 @@ solovyov.net {
 
   file_server
 
-  handle {
-    header Cache-Control max-age=3600
-  }
+  header * Cache-Control max-age=3600
 
   handle /static/* {
     header Cache-Control max-age=31536000
