--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
  "author": "Alexander Solovyov",
  "license": "ISC",
  "dependencies": {
-  "less": "~2.5.3",
-  "node-sass": "^4.5.2",
-  "uglifyjs": "~2.4.10"
+  "google-closure-compiler": "*"
  }
 }
