--- a/config
+++ b/config
@@ -12,8 +12,8 @@ AUTHOR = Alexander Solovyov
 	ext .html
 	directorify
 	template tag
-	config
-#	template page
+#	config
+	template page
 
 *.md: static/blog.css
 	config
