--- a/src/_nginx_push.conf
+++ b/src/_nginx_push.conf
@@ -1,3 +1,3 @@
 add_header Link "<{{ "static/blog.css" | version . | cut "^." "$" }}>; as=style; rel=preload";
 # add_header Link "<{{ "static/stuff.js" | version . | cut "^." "$" }}>; as=script; rel=preload";
-add_header Link "<{{ "favicon.ico" | version . | cut "^." "$" }}>; as=image; rel=preload";
+add_header Link "<{{ "static/favicon.svg" | version . | cut "^." "$" }}>; as=image; rel=preload";
