--- a/Caddyfile
+++ b/Caddyfile
@@ -15,6 +15,8 @@ solovyov.net {
     route {
       header Cache-Control max-age=3600
       header /static/* Cache-Control max-age=31536000
+      header *.jpg Cache-Control max-age=31536000
+      header *.png Cache-Control max-age=31536000
       header /favicon.ico Cache-Control max-age=31536000
     }
   }
