--- a/Caddyfile
+++ b/Caddyfile
@@ -10,16 +10,16 @@ solovyov.net {
   @exists {
     file
   }
+  @exists header Cache-Control max-age=3600
 
-  handle @exists {
-    route {
-      header Cache-Control max-age=3600
-      header /static/* Cache-Control max-age=31536000
-      header *.jpg Cache-Control max-age=31536000
-      header *.png Cache-Control max-age=31536000
-      header /favicon.ico Cache-Control max-age=31536000
-    }
+  @static {
+    file
+    path /favicon.ico
+    path /static/*
+    path *.jpg
+    path *.png
   }
+  @static header Cache-Control max-age=31536000
 
   redir /q /q/
   handle /q/* {
