--- a/Caddyfile
+++ b/Caddyfile
@@ -10,7 +10,7 @@ solovyov.net {
   @exists {
     file
   }
-  @exists header Cache-Control max-age=3600
+  header @exists Cache-Control max-age=3600
 
   @static {
     file
@@ -19,7 +19,7 @@ solovyov.net {
     path *.jpg
     path *.png
   }
-  @static header Cache-Control max-age=31536000
+  header @static Cache-Control max-age=31536000
 
   redir /q /q/
   handle /q/* {
