--- a/Caddyfile
+++ b/Caddyfile
@@ -7,19 +7,20 @@ solovyov.net {
 
   file_server
 
-  @exists {
-    file
-  }
-  header @exists Cache-Control max-age=3600
-
   @static {
     file
     path /favicon.ico
     path /static/*
+    path /media/*
     path *.jpg
     path *.png
   }
   header @static Cache-Control max-age=31536000
+
+  @exists {
+    file
+  }
+  header @exists Cache-Control max-age=3600
 
   redir /q /q/
   handle /q/* {
