--- a/config
+++ b/config
@@ -19,6 +19,7 @@ AUTHOR = Alexander Solovyov
 	config
 	ext .html
 	directorify
+	inner-template
 	tags tags/*.tag
 	markdown
 	template page
@@ -77,7 +78,7 @@ showkr/index.html:
 	:cat
 
 *.html: static/blog.scss
-	configf
+	config
 	directorify
 	inner-template
 	template page
