--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: buildjet-2vcpu-ubuntu-2004
+    runs-on: self-hosted #buildjet-2vcpu-ubuntu-2004
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
