why would I spend time on minifying js I dont use

--- a/config
+++ b/config
@@ -95,8 +95,8 @@ showkr/index.html:
 	inner-template
 	template page
 
-static/stuff.js:
-	:google-closure-compiler
+# static/stuff.js:
+# 	:google-closure-compiler
 
 \#*:
 	ignore
